# fuzzy-logic-controller

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: build_doxygen.cmake
docs/: Doxyfile.in
example/: demo.cc
include/: Base.h  FuzzyControl.h  Membership.h  Operation.h
include/fuzzy/: base.h  controller.h  fuzzification.h  fuzzy_control.h  fuzzy_def.h  fuzzy_logic.h  membership.h  operation.h  pid.h  utils.h
include/utils/: base.h
src/: FuzzyControl.cpp  Membership.cpp  demo.cc  example.cpp  fuzzification.cc  fuzzy_control.cc  fuzzy_logic.cc  membership.cc  pid.cc  plot.cc
